GNOME Bugzilla – Bug 748653
Progress not updated for corrupt images
Last modified: 2015-04-29 19:35:38 UTC
When viewing a directory of images, the progress status (aaa / bbb) in the lower right is only updated for valid images. Invalid images do not increment the current position. Patch will be submitted.
Created attachment 302584 [details] [review] Proposed patch
Thanks! Pushed to git. commit 21f7d6b6145c7eecabe6c95c1f0343dbdb62e80e Author: Kent Vander Velden <> Date: Wed Apr 29 10:31:33 2015 -0500 Update progress status bar for all images, valid and invalid. The progress status bar (cur / tot) in the lower right was only being updated when an image was valid, with data. When browsing a directory or otherwise multiple filenames given to eog, the status bar would only update when visting valid images. Simply moved update_image_pos(...) outside of the eog_image_has_data(...) test. https://bugzilla.gnome.org/show_bug.cgi?id=748653 --- This problem has been fixed in our software repository. The fix will go into the next software release. Once that release is available, you may want to check for a software upgrade provided by your Linux distribution.