Update progress status bar for all images, valid and invalid.

The progress status bar (cur / tot) in the lower right was only being updated
when an image was valid, with data. When browsing a directory or otherwise
multiple filenames given to eog, the status bar would only update when visting
valid images. Simply moved update_image_pos(...) outside of the
eog_image_has_data(...) test.

https://bugzilla.gnome.org/show_bug.cgi?id=748653